# PyTado

./: .coveragerc  .envrc.private  .gitignore  .pre-commit-config.yaml  .pydoc-markdown.yml  .pylintrc  CONTRIBUTION.md  MigrationV1.0.0.md  README.md  eleventy.config.js  generate_api_docs.py  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codeql-advanced.yml  deploy-11ty-pages.yml  lint-and-test-matrix.yml  pre-commit.yml  publish-to-pypi.yml  test.yml
PyTado/: __main__.py  const.py  exceptions.py  http.py  interface.py  logger.py  types.py  zone.py
PyTado/http/: __init__.py  http.py
PyTado/interface/: __init__.py  interface.py
PyTado/interface/api/: __init__.py  base_tado.py  hops_tado.py  my_tado.py
PyTado/logging/: logging.py
PyTado/models/: __init__.py  historic.py  home.py  return_models.py  util.py
PyTado/models/common/: schedule.py
PyTado/models/line_x/: __init__.py  device.py  room.py  schedule.py
PyTado/models/pre_line_x/: __init__.py  boiler.py  device.py  flow_temperature_optimization.py  home.py  schedule.py  zone.py
PyTado/token_manager/: __init__.py  can_manage_device_activation.py  device_token_manager.py  dummy_device_manager.py  file_token_manager.py  persisting_token_manager.py  token_manager_interface.py
PyTado/zone/: __init__.py  base_zone.py  hops_zone.py  my_zone.py
docs/: index.html
examples/: example.py
scripts/: bootstrap  init.sh  refresh.sh
tests/: __init__.py  conftest.py  const.py  syrupy.py  test_device_token_manager.py  test_file_token_manager.py  test_hops_zone.py  test_http.py  test_main.py  test_my_tado.py  test_my_zone.py  test_persisting_token_manager.py  test_rewrite.py  test_tado.py  test_tado_interface.py  test_zone.py
tests/fixtures/tadox/: rooms_and_devices.json
